# mvars

./: README.md  mvars.cabal
app/: Main.hs
lib/: Mvars.hs
test/: MvarsSpec.hs
