
name:                                       mvars
version:                                    0.1.0.0
homepage:                                   https://github.com/seahug/mvars#readme
license:                                    MIT
license-file:                               LICENSE
author:                                     Richard Cook
maintainer:                                 rcook@rcook.org
copyright:                                  2018 Richard Cook
category:                                   Command Line
build-type:                                 Simple
cabal-version:                              >= 1.10
extra-source-files:                         README.md

source-repository head
  type:                                     git
  location:                                 https://github.com/seahug/mvars.git

executable mvars
  default-language:                         Haskell2010
  hs-source-dirs:                           app
  main-is:                                  Main.hs
  ghc-options:                              -threaded
                                            -rtsopts
                                            -with-rtsopts=-N
                                            -W
                                            -Wall
                                            -Werror=incomplete-patterns
                                            -Werror=missing-methods
                                            -fwarn-unused-imports
  build-depends:                            base >= 4.7 && < 5
